
- DBA:
  . Passing null or false to dba_key_split() is deprecated. (Grigias)

- DOM:
  . Fixed bug GH-15192 (Segmentation fault in dom extension
    (html5_serializer)). (nielsdos)
  . Deprecated DOM_PHP_ERR constant. (nielsdos)
  . Removed DOMImplementation::getFeature(). (nielsdos)

- Hash:
  . Deprecated passing incorrect data types for options to ext/hash functions.
    (nielsdos)

- PHPDBG:
  . array out of bounds, stack overflow handled for segfault handler on windows.
    (David Carlier)

- Random:
  . lcg_value() is now deprecated. (timwolla)

- Readline:
  . Fixed bug #51558 (Shared readline build fails). (Peter Kokot)

- Session:
  . INI settings session.sid_length and session.sid_bits_per_character are now
    deprecated. (timwolla)

- SPL:
  . The SplFixedArray::__wakeup() method has been deprecated as it implements
    __serialize() and __unserialize() which need to be overwritten instead.
    (TysonAndre)

- Standard:
  . Unserializing the uppercase 'S' tag is now deprecated. (timwolla)

- Streams:
  . Implemented GH-15155 (Stream context is lost when custom stream wrapper is
    being filtered). (Quentin Dreyer)

01 Aug 2024, PHP 8.4.0alpha4

- GMP:
  . RFC: Change GMP bool cast behavior. (Saki Takamachi)

01 Aug 2024, PHP 8.4.0alpha3

- Core:
  . Fix GH-14978 (The xmlreader extension phpize build). (Peter Kokot)
  . Throw Error exception when encountering recursion during comparison, rather
    than fatal error. (ilutov)
  . Added missing cstddef include for C++ builds. (cmb)
  . Fixed bug GH-15108 (Segfault when destroying generator during shutdown).
    (Arnaud)

- BCMath:
  . Adjust bcround()'s $mode parameter to only accept the RoundingMode
    enum. (timwolla, saki)

- DOM:
  . Fix trampoline leak in xpath callables. (nielsdos)
  . Throw instead of silently failing when creating a too long text node in
    (DOM)ParentNode and (DOM)ChildNode. (nielsdos)

- FPM:
  . /dev/poll events.mechanism for Solaris/Illumos setting had been retired.